docs: update swagger and postman file
